--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -112,6 +112,7 @@
           </div>
           <div class="col-md-1"></div>
           <div class="col-md-6 design-layouts">
+            <div class="container">
             <div [ngbNavOutlet]="nav"></div>
             <ul ngbNav #nav="ngbNav">
               <li ngbNavItem class="design-right">
@@ -125,6 +126,7 @@
                   <p>We work with mid-size or large organisations in designing or redesigning complex systems. Optimising the process to bring transformation to the legacysystem.</p></ng-template>
               </li>
             </ul>
+            </div>
           </div>
         </div>
       </div>
