--- a/src/app/components/career/career.component.html
+++ b/src/app/components/career/career.component.html
@@ -17,13 +17,13 @@
                    <h2> UX Designer </h2>
                   <h6>Fulltime </h6> 
                 </div>
-                <div class="col-md-3 only-mobile">
+                <div class="col-md-3">
                   <h5>Chennai | India</h5><h6>Location</h6>
                </div>
-                <div class="col-md-3 only-mobile">
+                <div class="col-md-3">
                   <h5>2 - 4 Years</h5><h6>Experience </h6> 
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-3 text-right">
                   <div class="button">
                      <div class="btn btnn" routerLink="/career/ui/job-description">View</div>
                   </div>
