--- a/src/app/modules/career/components/ui-job-description/ui-job-description.component.html
+++ b/src/app/modules/career/components/ui-job-description/ui-job-description.component.html
@@ -1,5 +1,5 @@
 <div class="career-ui">
-    <div class="banner only-mobile">
+    <div class="banner">
        <div class="container">
              <h1>Drop in your detail <br> if you want to be <span> a part of us</span> </h1>
              <h4>Candidates can share their resume with portfolio to  <span>work@uxmint.in</span></h4>
