--- a/src/app/modules/services/components/interface-design/interface-design.component.scss
+++ b/src/app/modules/services/components/interface-design/interface-design.component.scss
@@ -5,23 +5,23 @@
     //padding: 50px 0px;
 .banner{
     // background-image: url('/dev/assets/images/bg.png');
-    height: 770px;
-    padding: 300px 0px;
+    height: 580px;
+    padding: 200px 0px;
     h1{
-        font-size: 96px;
-        color: #C3343C;
+        font-size: 56px;
+        color: #3B3B3B;
         font-family: Baskerville;
     }
     hr.line{
-        border-bottom: 10px solid gray;
-        width: 50%;
+        border-bottom: 3px solid #C3343C;
+        width: 30%;
         text-align: left;
         margin-left: 0;
-        margin-top: -7px;
+        margin-top: -3px;
     }
     p{
-        font-size: 24px;
-        color: #000000;
+        font-size: 20px;
+        color: #707071;
         font-family: Muli;
     }
     @include media-breakpoint-down(lg){
@@ -33,8 +33,8 @@
         }
     }
     @include media-breakpoint-down(md){
-        height: 450px;
-        padding: 200px 0px;
+        height: 420px;
+        padding: 150px 0px;
         .row{
             .col-md-5{
                 flex: 0 0 80%;
@@ -50,7 +50,7 @@
     }
     @include media-breakpoint-down(sm){
         background-position: center;
-        height: 560px;
+        height: 500px;
         .row{
             .col-md-5{
                 flex: 0 0 100%;
@@ -240,6 +240,7 @@
         margin-top: 6px;
     }
     @include media-breakpoint-down(md){
+        padding: 75px 0px;
         h2{
             font-size: 36px;
         }
@@ -327,6 +328,9 @@
     display: flex;
     padding: 0 20px 40px 20px;
 }
+.flex-column{
+    padding: 25px 0px;
+}
 .nav-pills a{
     color: #282829;
     font-family: Baskerville;
@@ -334,6 +338,3 @@
         margin-right: 10px;
     }
 }
-// .flex-column{
-//     padding: 75px 0px;
-// }
