--- a/src/app/modules/services/components/ui-development/ui-development.component.html
+++ b/src/app/modules/services/components/ui-development/ui-development.component.html
@@ -101,7 +101,7 @@
                             <h6>Hybrid</h6>
                         </div>
                         <div class="list">
-                          <img src="./assets/images/services/Node.png">
+                          <img src="./assets/images/services/Node.svg">
                           <h6>Node</h6>
                       </div>
                       </div>
@@ -227,43 +227,43 @@
               <div class="row">
                 <div class="col-md-4">
                     <div class="list">
-                        <img src="./assets/images/services/website.png">
+                        <img src="./assets/images/services/website.svg">
                         <h6>Website</h6>
                     </div>
                     <div class="list">
-                      <img src="./assets/images/services/Hybrid.png">
+                      <img src="./assets/images/services/Hybrid.svg">
                       <h6>Hybrid</h6>
                   </div>
                   <div class="list">
-                    <img src="./assets/images/services/Node.png">
+                    <img src="./assets/images/services/Node.svg">
                     <h6>Node</h6>
                 </div>
                 </div>
                 <div class="col-md-3">
                     <div class="list">
-                        <img src="./assets/images/services/HTML.png">
+                        <img src="./assets/images/services/HTML.svg">
                         <h6>HTML 5</h6>
                     </div>
                     <div class="list">
-                        <img src="./assets/images/services/Angular.png">
+                        <img src="./assets/images/services/Angular.svg">
                         <h6>Angular</h6>
                     </div>
                     <div class="list">
-                      <img src="./assets/images/services/React.png">
+                      <img src="./assets/images/services/React.svg">
                       <h6>React</h6>
                   </div>
                 </div>
                 <div class="col-md-3">
                   <div class="list">
-                    <img src="./assets/images/services/Windows.png">
+                    <img src="./assets/images/services/Windows.svg">
                     <h6>Windows</h6>
                 </div>
                 <div class="list">
-                  <img src="./assets/images/services/Android.png">
+                  <img src="./assets/images/services/Android.svg">
                   <h6>Android</h6>
               </div>
               <div class="list">
-                  <img src="./assets/images/services/iOS.png">
+                  <img src="./assets/images/services/iOS.svg">
                   <h6>iOS</h6>
               </div>
               </div>
