--- a/src/app/modules/work/components/childcare-portal/childcare-portal.component.html
+++ b/src/app/modules/work/components/childcare-portal/childcare-portal.component.html
@@ -10,7 +10,7 @@
                 </div>
                 <div class="col-md-6 orderone">
                     <div class="container">
-                        <img src="./assets/images/works/child2.png">
+                        <img src="./assets/images/works/child4.png">
                     </div>
                 </div>
             </div>
@@ -47,66 +47,27 @@
     </div>
     <div class="target-strategy">
         <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="container">
             <div class="target">
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="48.026" height="43" viewBox="0 0 48.026 43">
-                    <defs>
-                      <clipPath id="clip-path">
-                        <rect id="Rectangle_679" data-name="Rectangle 679" width="9" height="24" transform="translate(178 2219)" fill="#fff" stroke="#707070" stroke-width="2"/>
-                      </clipPath>
-                      <clipPath id="clip-path-2">
-                        <rect id="Rectangle_680" data-name="Rectangle 680" width="9" height="15" transform="translate(186 2247)" fill="#fff" stroke="#707070" stroke-width="2"/>
-                      </clipPath>
-                    </defs>
-                    <g id="Group_514" data-name="Group 514" transform="translate(-148.974 -2219)">
-                      <path id="Path_902" data-name="Path 902" d="M1564.974,8865v-5.972a10.239,10.239,0,0,1,2.219-4.255,8.552,8.552,0,0,1,4.35-2.589c1.079-.227,17.176-.327,18.391,0a12.7,12.7,0,0,1,5.136,2.915,7.38,7.38,0,0,1,2.132,3.929V8865" transform="translate(-1416 -6603)" fill="#5b5b5b"/>
-                      <path id="Path_904" data-name="Path 904" d="M1564.974,8865v-5.972a10.239,10.239,0,0,1,2.219-4.255,8.552,8.552,0,0,1,4.35-2.589c1.079-.227,17.176-.327,18.391,0a12.7,12.7,0,0,1,5.136,2.915,7.38,7.38,0,0,1,2.132,3.929V8865" transform="translate(-1411.702 -6603)" fill="none" stroke="#000" stroke-width="2"/>
-                      <ellipse id="Ellipse_134" data-name="Ellipse 134" cx="9" cy="8.5" rx="9" ry="8.5" transform="translate(156 2224)" fill="#5b5b5b"/>
-                      <g id="Ellipse_136" data-name="Ellipse 136" transform="translate(160 2224)" fill="none" stroke="#000" stroke-width="2">
-                        <ellipse cx="9" cy="8.5" rx="9" ry="8.5" stroke="none"/>
-                        <ellipse cx="9" cy="8.5" rx="8" ry="7.5" fill="none"/>
-                      </g>
-                      <g id="Group_510" data-name="Group 510" transform="translate(2)">
-                        <g id="Mask_Group_108" data-name="Mask Group 108" clip-path="url(#clip-path)">
-                          <g id="Ellipse_135" data-name="Ellipse 135" transform="translate(169 2224)" fill="none" stroke="#000" stroke-width="2">
-                            <ellipse cx="9" cy="8.5" rx="9" ry="8.5" stroke="none"/>
-                            <ellipse cx="9" cy="8.5" rx="8" ry="7.5" fill="none"/>
-                          </g>
-                        </g>
-                        <g id="Mask_Group_109" data-name="Mask Group 109" clip-path="url(#clip-path-2)">
-                          <path id="Path_903" data-name="Path 903" d="M1564.974,8865v-5.972a10.239,10.239,0,0,1,2.219-4.255,8.552,8.552,0,0,1,4.35-2.589c1.079-.227,17.176-.327,18.391,0a12.7,12.7,0,0,1,5.136,2.915,7.38,7.38,0,0,1,2.132,3.929V8865" transform="translate(-1403.202 -6603)" fill="none" stroke="#000" stroke-width="2"/>
-                        </g>
-                      </g>
-                    </g>
-                  </svg>
-                  
-                <h6>Target Audience</h6>
+                <div class="row">
+                    <div class="col-md-4">
+                        <h6>Target Audience</h6>
+                    </div>
+                    <div class="col-md-8">
                 <p>- Kids of age 6 - 12</p>
                 <p>- Coordinators who takes care of kids</p>
-            </div>
-            </div>
-        </div>
-            <div class="col-md-6">
-                <div class="container">
-            <div class="strategy">
-                <svg xmlns="http://www.w3.org/2000/svg" width="35.134" height="37.985" viewBox="0 0 35.134 37.985">
-                    <g id="Group_513" data-name="Group 513" transform="translate(-291 -2223.015)">
-                      <g id="Group_511" data-name="Group 511" transform="translate(-393 -1.992)">
-                        <path id="Path_909" data-name="Path 909" d="M2100,8859.676l.6-10.544a26.067,26.067,0,0,1,.775-8.22c1.117-3.489,1.516-3.654,3.7-5.737a10.892,10.892,0,0,1,5.02-2.595l3.4-3.482s.509-.807,1.033-.807,1.065.807,1.065.807l11.258,11.108s2.065,1.678,2.214,2.357a7.225,7.225,0,0,1,0,1.862,3.339,3.339,0,0,1-.548.9,3.632,3.632,0,0,1-1,.943,2.419,2.419,0,0,1-1.061.413,14.636,14.636,0,0,1-1.909-.413c-.639-.189-11.334-3.451-11.334-3.451s-.354-.572,1.255,1.634,8.488,9.973,8.488,9.973v5.256Z" transform="translate(-1416 -6603.284)" fill="#707070"/>
-                        <path id="Path_908" data-name="Path 908" d="M2100,8859.676l.6-10.544a26.067,26.067,0,0,1,.775-8.22c1.117-3.489,1.516-3.654,3.7-5.737a10.892,10.892,0,0,1,5.02-2.595l3.4-3.482s.509-.807,1.033-.807,1.065.807,1.065.807l11.258,11.108s2.065,1.678,2.214,2.357a7.225,7.225,0,0,1,0,1.862,3.339,3.339,0,0,1-.548.9,3.632,3.632,0,0,1-1,.943,2.419,2.419,0,0,1-1.061.413,14.636,14.636,0,0,1-1.909-.413c-.639-.189-11.334-3.451-11.334-3.451s-.354-.572,1.255,1.634,8.488,9.973,8.488,9.973v5.256Z" transform="translate(-1411 -6602.284)" fill="none" stroke="#000" stroke-width="2"/>
-                        <path id="Path_907" data-name="Path 907" d="M2104.211,8865.276h25.943" transform="translate(-1416.131 -6603.284)" fill="none" stroke="#000" stroke-width="2"/>
-                      </g>
-                    </g>
-                  </svg>
-                  
-                <h6>Strategy </h6>
-             <p>The platform should encourage students and motivate them in what they do and enable them to do things that makes them happy with the help of the technology.</p> 
+                    </div>
                 </div>
             </div>
-        </div>
-        </div>
+            <div class="strategy">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h6>Strategy</h6>
+                    </div>
+                    <div class="col-md-8">
+                        <p>The platform should encourage students and motivate them in what they do and enable them to do things that makes them happy with the help of the technology.</p> 
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="needs-challenges">
@@ -120,11 +81,7 @@
                         <div class="needs-right">
                            <h2>Solutions</h2>
                            <hr class="line"> 
-                            <p> - Character specific interface themes.
-                            <p> - Simple and Enjoyable interactive games for learning reducing difficulty</p>
-                            <p> - Functionalities that lets them show their love and engage with their sponsors in a much easy and fun way.</p>
-                            <p> - Age specific features to cater a larger crowd</p>
-                            <p> - Remote data loading to allow usage even in regions of no network connectivity</p>
+                      <p>- Character specific interface themes. <br> - Simple and Enjoyable interactive games for learning reducing difficulty. <br>  - Functionalities that lets them show their love and engage with their sponsors in a much easy and fun way. <br> - Age specific features to cater a larger crowd. <br> - Remote data loading to allow usage even in regions of no network connectivity.</p>
                         </div>
                      </div>
                 </div>
@@ -138,7 +95,7 @@
             <div class="col-md-6 left">
                 <h2>Other Case Studies</h2>
                 <div class="button">
-                    <div class="btn btnn" routerLink="/services">See All Works</div>
+                    <div class="btn btnn" routerLink="/works">See All Works</div>
                 </div>
             </div>
             <div class="col-md-6 right">
