--- a/src/app/modules/work/components/marketing/marketing.component.scss
+++ b/src/app/modules/work/components/marketing/marketing.component.scss
@@ -6,12 +6,13 @@ h2{
     font-family: Baskerville;
     color: #3B3B3B;
     @include media-breakpoint-down(md) {
-        font-size: 36px;
+        font-size: 32px;
+        padding-bottom: 15px;
     }
 }
 p{
-    font-size: 16px;
-    line-height: 30px;
+    font-size: 18px;
+    font-family: Muli;
     color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 14px;
@@ -19,6 +20,7 @@ p{
 }
 h6{
     font-size: 24px;
+    font-family: Muli;
     color: #3B3B3B;
     @include media-breakpoint-down(md) {
         font-size: 28px;
@@ -44,21 +46,34 @@ h6{
 
         }
         @include media-breakpoint-down(lg){
+            height: 645px;
+            padding: 250px 0px;
             .banner-header{
                 padding: 15px 0px;
+            }
+            img{
+                margin-top: -15%;
             }
         }
         @include media-breakpoint-down(md){
+            height: 501px;
+            padding: 200px 0px;
             .banner-header{
-                padding: 15px 0px;
+                padding: 30px 0px;
+            }
+            h6{
+                font-size: 20px;
             }
         }
         @include media-breakpoint-down(sm){
+            height: 740px;
+            padding: 300px 0px;
             .banner-header{
-                padding: 250px 0px;
+                padding: 150px 0px;
             }
             img{
-                margin-top: -70%;
+                width: 100%;
+                margin-top: -65%;
                 margin-left: -40px;
             }
         }
@@ -67,15 +82,14 @@ h6{
         background-color: #FCFCFC;
         padding: 200px 0px;
         p{
-            font-size: 18px;
-            font-family: Muli;
-            line-height: 35px;
+             font-size: 18px;
+            line-height: 40px;
         }
         @include media-breakpoint-down(lg){
-            padding: 200px 0px;
+            padding: 150px 0px;
         }
         @include media-breakpoint-down(md){
-            padding: 150px 0px;
+            padding: 100px 0px;
         }
         @include media-breakpoint-down(sm){
             padding: 80px 0px;
@@ -88,7 +102,7 @@ h6{
         @include media-breakpoint-down(sm){
             img{
                 width: 100%;
-                //display: none !important;
+                display: none !important;
             }  
         }
     }
@@ -131,18 +145,17 @@ h6{
     }
     .approach{
         background-color: #EBEBEB;
-        color: #000000;
         padding: 200px 0px;
         p{
-            line-height: 35px;
-            font-family: Muli;
             font-size: 20px;
+            font-family: Muli;
+            line-height: 40px;
         }
         @include media-breakpoint-down(lg){
-            padding: 200px 0px;
+            padding: 150px 0px;
         }
         @include media-breakpoint-down(md){
-            padding: 150px 0px;
+            padding: 100px 0px;
         }
         @include media-breakpoint-down(sm){
             padding: 80px 0px;
@@ -160,13 +173,25 @@ h6{
             margin-bottom: 120px;
         }
         h6{
-            font-family: Baskerville;
             font-size: 36px;
+            font-family: Baskerville;
         }
         p{
-            font-size: 18px;
+             font-size: 18px;
             font-family: Muli;
-            line-height: 40px;
+            line-height: 35px;
+        }
+        @include media-breakpoint-down(lg){
+            padding: 100px 0px;
+            .target{
+                margin-bottom: 70px;
+            }
+        }
+        @include media-breakpoint-down(md){
+            padding: 100px 0px;
+            h6{
+                padding-bottom: 15px;
+            }
         }
         @include media-breakpoint-down(sm){
             padding: 80px 0px;
@@ -202,7 +227,7 @@ h6{
             width: 0px;
         }
         .needs-right{
-            padding: 100px 30px;
+            padding: 28px 30px;
         }
         @include media-breakpoint-down(lg){
             padding: 50px 0px;
@@ -213,7 +238,7 @@ h6{
         @include media-breakpoint-down(md){
             padding: 50px 0px;
             h1{
-                font-size: 72px; 
+                font-size: 56px; 
             }
             h2{
                 font-size: 36px;
@@ -269,23 +294,24 @@ h6{
         text-align: center;
         padding: 100px 0px;
         @include media-breakpoint-down(lg){
-            padding: 100px 0px;
+            //margin-top: -100px;
+            padding: 0px 0px;
             img{
-                width: 95%;
+                width: 99%;
                 margin-top: 100px;
             }
         }
         @include media-breakpoint-down(md){
-            padding: 75px 0px;
+            padding: 0px 0px;
             img{
-                width: 90%;
+                width: 98%;
                 margin-top: 100px;
             }
         }
         @include media-breakpoint-down(sm){
             padding: 50px 0px;
             img{
-                width: 90%;
+                width: 98%;
                 margin-top: 50px;
             }
         }
@@ -391,7 +417,8 @@ h6{
 @include media-breakpoint-down(sm) {
     .banner{
         img{
-            width: 100%;
+            width: 90%;
+            padding-left: 20px;
         }
     }
     }
