--- a/src/app/modules/work/components/uxahead/uxahead.component.html
+++ b/src/app/modules/work/components/uxahead/uxahead.component.html
@@ -39,7 +39,7 @@
                 <div class="col-md-3">
                     <h2>Approach</h2>
                 </div>
-                <div class="col-md-7">
+                <div class="col-md-8">
                     <div class="container">
                         <p>Our goal was to communicate all of the mentioned things to their clients who are businesses that deal with the end customers of the service or the product</p>
                     </div>
@@ -96,7 +96,7 @@
         </div>
     </div>
     <div class="image-event">
-        <img src="./assets/images/works/uxahead 4.png">
+        <img src="./assets/images/works/uxahead4.png">
     </div>
     <div class="work-description">
         <div class="container">
@@ -154,7 +154,7 @@
             <div class="col-md-6 left">
                 <h2>Other Case Studies</h2>
                 <div class="button">
-                    <div class="btn btnn" routerLink="/services">See All Works</div>
+                    <div class="btn btnn" routerLink="/works">See All Works</div>
                 </div>
             </div>
             <div class="col-md-6 right">
