--- a/src/app/components/career/career.component.scss
+++ b/src/app/components/career/career.component.scss
@@ -46,7 +46,6 @@
     }  
     .career-layout{
         padding: 150px 30px;
-        padding-bottom: 150px;
         .career-design{
             //padding: 70px 30px;
             h1{
@@ -57,7 +56,7 @@
                 font-family: Baskerville;
              }
             .designer{
-                padding: 20px 0px;
+                padding: 10px 40px;
             h2{
                 color: #3B3B3B;
                 font-size: 24px;
@@ -108,7 +107,7 @@
                 padding: 50px 0px;
                 h2{
                     font-size: 24px;
-                    padding-bottom: 25px; 
+                    //padding-bottom: 25px; 
                 }           
                 .designer{
                 padding-top: 40px;
@@ -118,6 +117,10 @@
                 }
                 h6{
                     font-size: 20px;
+                }
+                .button{
+                    margin-top: 50px;
+                     text-align: left;
                 }
                 .btn-white{
                 width: 85px;
