--- a/src/app/components/engagement-models/engagement-models.component.scss
+++ b/src/app/components/engagement-models/engagement-models.component.scss
@@ -39,7 +39,7 @@
 }
 @include media-breakpoint-down(md) {
     .banner{
-        height: 570px;
+        height: 500px;
         padding: 180px 0px;
         .engagement-layout{
             h1{
@@ -73,12 +73,12 @@
         margin-top: -100px;
         ::ng-deep{
             .card{
-                background: #E56635 !important;
+                background-color: #FAA55B!important;
             }
         }
         ::ng-deep{
         .card-header {
-            background: #E56635 !important;
+            background-color: #FAA55B!important;
         }
         .btn-link:hover {
             color: #FFFFFF;
@@ -134,9 +134,6 @@
     .feature-work{
         display: none;
     }
-}
-.hr{
-    border-top: 1px solid #FFFFFF;
 }
 .feature-work{
     background-color: #FAA55B;
