--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -20,7 +20,7 @@
                </div>
                <div class="col-md-6 step-image">
                    <div class="image">
-                     <img src="./assets/images/home/transformation.svg">
+                     <img src="./assets/images/home/transformation.png">
                    </div>
                   </div>
                </div>
@@ -35,7 +35,7 @@
           </div>
           <div class="row">
              <div class="col-md-7">
-                <h3>We’ve created and collaborated on to build lots of great products like Information portals, Enterprise applications, Digital transformation, Mobile apps, Product Developments & More...</h3>
+                <p>We’ve created and collaborated on to build lots of great products like Information portals, Enterprise applications, Digital transformation, Mobile apps, Product Developments & more...</p>
              </div>
              <div class="col-md-5"></div>
           </div>
@@ -48,22 +48,22 @@
       <div class="container">
     <div class="flex">
       <div class="icon">
-         <img src="./assets/images/home/logo-1.png">
+         <img src="./assets/images/home/logo1.svg">
       </div>
       <div class="icon">
-         <img src="./assets/images/home/logo-2.png">
+         <img src="./assets/images/home/logo2.svg">
       </div>
       <div class="icon">
-         <img src="./assets/images/home/logo-3.png">
+         <img src="./assets/images/home/logo3.svg">
       </div>
       <div class="icon">
-         <img src="./assets/images/home/logo-4.png">
+         <img src="./assets/images/home/logo4.svg">
       </div>
       <div class="icon">
-         <img src="./assets/images/home/logo-5.png">
+         <img src="./assets/images/home/logo5.svg">
       </div>
       <div class="icon">
-         <img src="./assets/images/home/logo-6.png">
+         <img src="./assets/images/home/logo6.svg">
       </div>
    </div>
 </div>
@@ -76,7 +76,7 @@
              </div>
             </div>
              <div class="row left justify-content-md-center">
-             <div class="col-md-3">
+             <div class="col-md-3" routerLink="services">
                 <div class="row types">
                    <div class="col-md-3">
                       <div class="icon">
@@ -111,7 +111,7 @@
                   </div>
                 </div>
                 </div>
-            <div class="col-md-3">
+            <div class="col-md-3" routerLink="services">
                 <div class="row types">
                    <div class="col-md-3">
                       <div class="icon">
@@ -137,7 +137,7 @@
                   </div>
                 </div>
                </div>
-               <div class="col-md-3">
+               <div class="col-md-3" routerLink="services">
                 <div class="row types">
                    <div class="col-md-3">
                       <div class="icon">
@@ -167,7 +167,7 @@
              </div>
              </div>
             <div class="row left justify-content-md-center">
-             <div class="col-md-3">
+             <div class="col-md-3" routerLink="services">
                 <div class="row types">
                    <div class="col-md-3">
                       <div class="icon">
@@ -185,10 +185,9 @@
                          
                       </div>
                    </div>
-                   <div class="col-md-4">
-                     <h4>Strategy Design</h4>
+                   <div class="col-md-6">
+                     <h4>Strategy<br> Design</h4>
                    </div>
-                   <div class="col-md-2"></div>
                    <div class="col-md-3">
                      <div class="image">
                         <img src="./assets/images/home/arrow.png"routerLink="services">
@@ -196,7 +195,7 @@
                   </div>
                 </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3" routerLink="services">
                 <div class="row types">
                    <div class="col-md-3">
                       <div class="icon">
@@ -224,7 +223,7 @@
                   </div>
                 </div>
                </div>
-               <div class="col-md-3">
+               <div class="col-md-3" routerLink="services">
                 <div class="row types">
                    <div class="col-md-3">
                       <div class="icon">
