--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -4,41 +4,53 @@
 :host{
     padding-top: 0px;
 }
+h1{
+    font-size: 72px;
+    color: #C3343C;
+    font-family: Baskerville;
+    @include media-breakpoint-down(md) {
+        font-size: 36px;
+    }
+}
+h2{
+    font-size: 57px;
+    color: #3B3B3B;
+    font-family: Baskerville;
+    @include media-breakpoint-down(md) {
+        font-size: 36px;
+    }
+}
+h3{
+    font-size: 24px;
+    font-family: Muli;
+    color: #707071;
+    margin-bottom: 30px;
+}
+h4{
+    font-size: 18px;
+    font-weight: 400;
+    color: #707071;
+    line-height: 36px;
+    padding-top: 10px;
+}
+p{
+    font-size: 18px;
+    color: #707071;
+    padding-top: 10px;
+    font-family: Muli;
+    @include media-breakpoint-down(md) {
+        font-size: 16px;
+    }
+}
+
 .home{
     .banner{
-        padding-top: 140px;
-        position: relative;
         background-color: #E2E2E2;
         height: 700px;
         padding: 200px 0px;
-        h2{
-            font-size: 48px;
-            color: #3B3B3B;
-            font-family: Muli;
-        }
-        h1{
-            font-size: 72px;
-            color: #C3343C;
-            font-family: Baskerville;
-        }
-        p{
-            font-size: 18px;
-            color: #707071;
-            padding-top: 10px;
-            font-family: Muli;
-        }
         @include media-breakpoint-down(md){
             height: 500px;
             padding: 180px 0px;
-            h2{
-                font-size: 24px;
-            }
-            h1{
-                font-size: 36px;
-            }
-            p{
-                font-size: 14px;
-            }
         }
         @include media-breakpoint-down(sm){
             height: 500px;
@@ -51,31 +63,17 @@
         }
         .card{
             border: none;
-            padding: 100px 170px 5px 100px;
-            h3{
-                font-size: 24px;
-                font-family: Muli;
-                color: #707071;
-                margin-bottom: 30px;
-            }
-            h2{
-                font-size: 57px;
-                font-family: Baskerville;
-                color: #3B3B3B;
-                margin-bottom: 20px;
-            }
-            h4{
-                font-size: 18px;
-                font-family: Muli;
-                color: #707071;
-                margin-bottom: 60px;
-            }
+            padding: 100px 170px 5px 60px;
+        }
+        .button{
+            padding-top: 40px;
         }
         .step-image{
             text-align: center;
             margin-bottom: -12px;
             margin-left: -70px;
             img{
+                padding-top: 100px;
                 width: auto;
                 height: 100%;
             }
@@ -88,60 +86,38 @@
                 padding: 100px 10px 100px 50px;
             }
             .step-image{
-                margin-left: -60px;
+                margin-left: -40px;
+                img{
+                    width: 100%;
+                }
             }
         }
         @include media-breakpoint-down(md){
-            .card{
-                h3{
-                    font-size: 18px;
-                }
-                h2{
-                    font-size: 24px;
-                }
-                h4{
-                    font-size: 16px;
-                }
-            }
             .step-image{
                 padding: 30px 0px 10px 0px;
-                margin-left: -60px;
+                margin-left: -20px;
             }
         }
         @include media-breakpoint-down(sm){
+            margin-bottom: 150px;
             .card{
                 padding: 40px 0px 0px 10px;
                 height: 220px;
-               
-                h2{
-                    margin-bottom: 20px;
-                }
-                h4{
-                    margin-bottom: 30px;
-                }
             }
             .step-image{
                 padding: 60px 0px 30px 0px;
+                display: none;
+            }
+            .button{
+                padding-top: 0px;
             }
         }
     }
     .products{
-        padding: 80px 0;
-        color: #FFF;
-        h2{
-            font-size: 57px;
-            font-family: Baskerville;
-            color: #3B3B3B;
-            padding-top: 60px;
-            margin-bottom: 20px;
-            line-height: 60px;
-        }
-        h3{
-            font-size: 18px;
-            font-family: Muli;
-            line-height: 32px;
-            color: #707071;
-            margin-bottom: 50px;
+        padding: 150px 0;
+background-color: #FFFFFF;
+        .button{
+            padding-top: 40px;
         }
         .icon{
             text-align: center;
@@ -177,17 +153,7 @@
             }
         }
         @include media-breakpoint-down(md){
-            h4{
-                font-size: 18px;
-            }
-            h2{
-                font-size: 24px;
-                line-height: 38px;
-            }
-            h3{
-                font-size: 16px;
-                line-height: 22px;
-            }
+            padding: 100px 0;
             .btn{
                 font-size: 16px;
             }
@@ -198,12 +164,9 @@
                 }
             }
         }
-        @include media-breakpoint-down(sm){
-            h4{
-                display: none;
-            }
-            h2{
-                padding-top: 0;
+        @include media-breakpoint-down(md){
+            .button{
+                padding-top: 0px;
             }
         }
     }
@@ -220,7 +183,7 @@
         .flex{
          overflow-y: scroll;
          display: flex;
-         padding: 30px 0px 30px 30px;
+         padding: 0px 0px 0px 30px;
         }
     }
 }
@@ -228,21 +191,8 @@
         background-color: #FCFCFC;
         padding: 100px 0px;
         color: #FFF;
-        h2{
-            font-size: 57px;
-           font-family: Baskerville;
-           color: #3B3B3B;
-            margin-bottom: 60px;
-        }
         .left{
             margin-left: -210px;
-        }
-        h4{
-            font-size: 18px;
-            font-weight: 400;
-            color: #707071;
-            line-height: 36px;
-            padding-top: 10px;
         }
          .icon{
             svg{
@@ -257,7 +207,6 @@
         .types{
             background-color: #FFFFFF;
             cursor: pointer;
-            //padding: 5px 5px;
             margin-bottom: 25px;
             margin-left: 10px;
         }
@@ -267,52 +216,51 @@
             }
         }
         @include media-breakpoint-down(lg){
-            h4{
-                font-size: 17px;
-            }
             .types{
                 margin-left: 0px;
             }
             .left{
-                margin-left: -20px;
+                padding-left: 60px;
             }
         }
         @include media-breakpoint-down(md){
-            h2{
-                font-size: 28px;
-            }
             .btn{
                 font-size: 16px;
             }
             .icon{
-                img{
-                    margin-top: 20px;
+                svg{
+                   width: 35px;
                 }
              }
-            h4{
-                font-size: 18px;
+             h4{
+                 font-size: 16px;
+             }
+             .image{
+                img{
+                    width: 30px;
+                }
             }
             .left{
-                margin-left: -17px;
+                padding-left: 90px;
             }
         }
         @include media-breakpoint-down(sm){
             padding: 80px 0px 20px 0px;
-            h2{
-                margin-bottom: 40px;
-            }
             .btn{
                 margin-bottom: 30px;
             }
-            h4{
-                padding-top: 15px;
+            .left{
+                padding-left: 200px;
             }
             .types{
                 .col-md-3{
-                    width: 25%;
+                    width: 18%;
                 }
-                .col-md-9{
-                    width: 75%;
+                .col-md-6{
+                    width: 55%;
+                }
+                h4{
+                    padding: 15px;
                 }
             }
         }
@@ -327,7 +275,7 @@
             }
         }
        .left{
-           padding: 40px 130px 80px 90px;
+           padding: 40px 130px 80px 75px;
            background-color: #E2E2E2;
            h2{
                font-size: 57px;
@@ -533,6 +481,7 @@
     font-size: 20px;
     padding: 10px 20px;
     font-family: Muli;
+    margin-top: 30px;
     &:hover{
         background-color: #C3343C;
         color: #FFFFFF;
