--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -6,7 +6,6 @@
             <h3><a>let us know</a> what you are looking for</h3>
         </div>
     </div>
-    <div class="hr"></div>
     <div class="types">
         <div class="container">
             <div class="d-flex">
@@ -77,7 +76,7 @@
         <ngb-panel id="static-1"  >  
            <ng-template ngbPanelTitle>
               <div class="dis_flex">
-                 <div>User Experience </div>
+                 <div><h2>User Experience </h2></div>
                  <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
               </div>
             </ng-template> 
@@ -243,7 +242,7 @@
         <ngb-panel id="static-1"  >  
            <ng-template ngbPanelTitle>
               <div class="dis_flex">
-                 <div>Enterprise Applications </div>
+                 <div><h2>Enterprise Applications </h2></div>
                  <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
               </div>
             </ng-template> 
