--- a/src/app/modules/career/components/ui-job-description/ui-job-description.component.scss
+++ b/src/app/modules/career/components/ui-job-description/ui-job-description.component.scss
@@ -39,8 +39,8 @@
             }
         }
         @include media-breakpoint-down(sm) {
-            display: none;
-            height: 500px;
+            //display: none;
+            height: 600px;
         }
     }
 
@@ -67,6 +67,7 @@
             }
             .button{
                 margin-top: 40px;
+                margin-bottom: 50px;
             }
             .btn-white{
                 border: 2px solid #0D0D0D;
@@ -75,14 +76,14 @@
                 font-size: 20px;
                 font-family: Muli;
                 padding: 8px 25px;
-                color: #0D0D0D;
+                //color: #0D0D0D;
                 a:hover{
                     background-color: #C3343C;
                     color: #FFFFFF!important;
                     //border: 2px solid #FFFFFF;
                 }
                 a{
-                    color: #0D0D0D;
+                    color: #0D0D0D!important;
                     text-decoration: none;
                 }
             }
@@ -170,10 +171,8 @@
 }
 
 @include media-breakpoint-down(sm) { 
-    .only-mobile{
-        display: none;
-    } 
-    padding: 100px 0px;
+  
+    padding: 50px 0px;
     .careerui-design{
         padding: 10px 0px;
         .careerui-design{
