--- a/src/app/modules/services/components/ui-development/ui-development.component.scss
+++ b/src/app/modules/services/components/ui-development/ui-development.component.scss
@@ -5,23 +5,23 @@
     //padding: 50px 0px;
 .banner{
     // background-image: url('/assets/images/bg.png');
-    height: 770px;
-    padding: 300px 0px;
+    height: 580px;
+    padding: 200px 0px;
     h1{
-        font-size: 96px;
-        color: #C3343C;
+        font-size: 56px;
+        color: #3B3B3B;
         font-family: Baskerville;
     }
     hr.line{
-        border-bottom: 10px solid gray;
-        width: 48%;
+        border-bottom: 3px solid #C3343C;
+        width: 30%;
         text-align: left;
         margin-left: 0;
-        margin-top: -7px;
+        margin-top: -3px;
     }
     p{
-        font-size: 24px;
-        color: #000000;
+        font-size: 20px;
+        color: #707071;
         font-family: Muli;
     }
     @include media-breakpoint-down(lg){
@@ -33,8 +33,8 @@
         }
     }
     @include media-breakpoint-down(md){
-        height: 450px;
-        padding: 200px 0px;
+        height: 420px;
+        padding: 150px 0px;
         .row{
             .col-md-5{
                 flex: 0 0 80%;
@@ -50,7 +50,7 @@
     }
     @include media-breakpoint-down(sm){
         background-position: center;
-        height: 560px;
+        height: 500px;
         .row{
             .col-md-5{
                 flex: 0 0 100%;
@@ -241,15 +241,21 @@
         padding: 100px 0px;
     }
     @include media-breakpoint-down(md){
-        // .nav-pills .nav-link.active, .nav-pills .show > .nav-link{
-        //     margin-left: -60px;
-        // }
-        // .tab-content{
-        //     width: 68%;
-        // }
+        padding: 75px 0px;
         h2{
             font-size: 36px;
         }
+        .row{
+            .col-md-3 {
+                flex: 0 0 40%;
+                max-width: 33%;
+            }
+            .list{
+                padding: 7px;
+                padding-top: 35px;
+            }
+        }
+      
     }
 }
 }
@@ -327,8 +333,14 @@
     font-size: 36px;
     font-weight: 600;
     font-family: Baskerville;
+    svg{
+        margin-top: 8px !important;
+    }
     @include media-breakpoint-down(md){
         font-size: 28px;
+        svg{
+            margin-top: 0px !important;
+        }
     }
 }
 .nav-pills{
@@ -342,6 +354,13 @@
     display: flex;
     padding: 0 20px 40px 20px;
 }
+.flex-column{
+    padding: 25px 0px;
+}
 .nav-pills a{
     color: #282829;
+    font-family: Baskerville;
+    svg{
+        margin-right: 10px;
+    }
 }
