--- a/src/app/modules/work/components/automobile-usability/automobile-usability.component.html
+++ b/src/app/modules/work/components/automobile-usability/automobile-usability.component.html
@@ -11,16 +11,20 @@
     <div class="image-event">
         <img src="./assets/images/works/Automobile-2.png">
     </div>
-    <div class="approach">
+    <div class="approach-work">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
                     <h2>Approach</h2>
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-7">
                     <p>To observe the user Behaviour under different conditions with the parameters of Cognition, Acceptance and Reach. Also How Culture & Environment impacts the understanding of the functionalities?</p>
-                    </div>
+                </div>
             </div>
+        </div>
+    </div>
+    <div class="approach">
+        <div class="container">
             <div class="row">
                 <div class="col-md-4">
                     <h2>Testing Process </h2>
@@ -31,7 +35,9 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4"></div>
+                <div class="col-md-4">
+                    <h2>Testing Summary</h2>
+                </div>
                 <div class="col-md-8">
                     <h6>Testing Equipments</h6>
                     <p>Vehicle was provided with the prototype installed. Prototype was simulated for different scenarios with various alerts “Visual”, “Audio” and “Haptics”.</p>
@@ -39,7 +45,6 @@
             </div>
             <div class="row">
                 <div class="col-md-4">
-                        <h2>Testing Summary</h2>
                     </div>
                 <div class="col-md-8">
                         <div class="needs">
@@ -61,7 +66,7 @@
             <div class="col-md-6 left">
                 <h2>Other Case Studies</h2>
                 <div class="button">
-                    <div class="btn btnn" routerLink="/services">See All Works</div>
+                    <div class="btn btnn" routerLink="/works">See All Works</div>
                 </div>
             </div>
             <div class="col-md-6 right">
