--- a/src/app/modules/work/components/automobile-usability/automobile-usability.component.scss
+++ b/src/app/modules/work/components/automobile-usability/automobile-usability.component.scss
@@ -2,23 +2,24 @@
 @import '~bootstrap/scss/variables';
 @import '~bootstrap/scss/mixins';
 h2{
-    font-size: 57px;
+    font-size: 56px;
     font-family: Baskerville;
     color: #3B3B3B;
     @include media-breakpoint-down(md) {
-        font-size: 36px;
+        font-size: 32px;
+        padding-bottom: 15px;
     }
 }
 p{
-    font-size: 16px;
+    font-size: 18px;
+    font-family: Muli;
     color: #3B3B3B;
-    line-height: 30px;
     @include media-breakpoint-down(md) {
         font-size: 14px;
     }
 }
 h6{
-    font-size: 36px;
+    font-size: 24px;
     font-family: Muli;
     color: #3B3B3B;
     @include media-breakpoint-down(md) {
@@ -35,6 +36,31 @@ h6{
             font-weight: 300;
             margin-top: 30px;
         }
+        @include media-breakpoint-down(lg){
+            .banner-header{
+                padding: 15px 0px;
+            }
+            img{
+                width: 215%;
+            }
+        }
+        @include media-breakpoint-down(md){
+            .banner-header{
+                padding: 30px 0px;
+            }
+            img{
+                width: 215%;
+            }
+        }
+        @include media-breakpoint-down(sm){
+            height: 230px;
+            .banner-header{
+                padding: 150px 0px;
+            }
+            img{
+                width: 180%;
+            }
+        }
     }
     .image-event{
         img{
@@ -45,6 +71,28 @@ h6{
                 width: 100%;
                 //display: none !important;
             }  
+        }
+    }
+    .approach-work{
+        background-color: #EBEBEB;
+        padding: 200px 0px;
+        p{
+            font-size: 20px;
+            font-family: Muli;
+            line-height: 40px;
+        }
+        @include media-breakpoint-down(lg){
+            padding: 150px 0px;
+        }
+        @include media-breakpoint-down(md){
+            padding: 100px 0px;
+        }
+        @include media-breakpoint-down(sm){
+            padding: 80px 0px;
+            h2{
+                font-size: 36px;
+                margin-bottom: 30px;
+            }
         }
     }
     .approach{
@@ -62,7 +110,7 @@ h6{
         p{
             font-size: 20px;
             font-family: Muli;
-            line-height: 50px;
+            line-height: 40px;
         }
         @include media-breakpoint-down(lg){
             padding: 100px 0px;
