--- a/src/app/modules/work/components/childcare-portal/childcare-portal.component.scss
+++ b/src/app/modules/work/components/childcare-portal/childcare-portal.component.scss
@@ -6,12 +6,12 @@ h2{
     font-family: Baskerville;
     color: #3B3B3B;
     @include media-breakpoint-down(md) {
-        font-size: 36px;
+        font-size: 32px;
+        padding-bottom: 15px;
     }
 }
 p{
-    font-size: 20px;
-    line-height: 30px;
+    font-size: 18px;
     font-family: Muli;
     color: #3B3B3B;
     @include media-breakpoint-down(md) {
@@ -19,7 +19,7 @@ p{
     }
 }
 h6{
-    font-size: 26px;
+    font-size: 24px;
     font-family: Muli;
     color: #3B3B3B;
     @include media-breakpoint-down(md) {
@@ -38,26 +38,39 @@ h6{
         img{
             position: absolute;
             width: 85%;
-            margin-top: -40%;
+            margin-top: -55%;
             top: 100px;
             right: 20px;
         }
         @include media-breakpoint-down(lg){
+            height: 645px;
+            padding: 250px 0px;
             .banner-header{
-                padding: 50px 0px;
+                padding: 15px 0px;
+            }
+            img{
+                margin-top: -50%;
             }
         }
         @include media-breakpoint-down(md){
+            height: 501px;
+            padding: 200px 0px;
             .banner-header{
-                padding: 5px 0px;
+                padding: 30px 0px;
+            }
+            h6{
+                font-size: 20px;
             }
         }
         @include media-breakpoint-down(sm){
+            height: 800px;
+            padding: 300px 0px;
             .banner-header{
-                padding: 250px 0px;
+                padding: 300px 0px;
             }
             img{
-                margin-top: -70%;
+                width: 90%;
+                margin-top: -65%;
                 margin-left: -40px;
             }
         }
@@ -65,16 +78,20 @@ h6{
     .about-project{
         background-color: #FCFCFC;
         padding: 200px 0px;
+        p{
+             font-size: 18px;
+            line-height: 40px;
+        }
         .row{
             padding-bottom: 50px;
             margin-right: 0;
             margin-left: 0;
         }
         @include media-breakpoint-down(lg){
-            padding: 200px 0px;
+            padding: 150px 0px;
         }
         @include media-breakpoint-down(md){
-            padding: 150px 0px;
+            padding: 100px 0px;
         }
         @include media-breakpoint-down(sm){
             padding: 80px 0px;
@@ -87,7 +104,7 @@ h6{
         @include media-breakpoint-down(sm){
             img{
                 width: 100%;
-                //display: none !important;
+                display: none !important;
             }  
         }
     }
@@ -95,15 +112,29 @@ h6{
         background-color: #FCFCFC;
         color: #3D3D3D;
         padding: 150px 0px;
+        .target{
+            margin-bottom: 120px;
+        }
         h6{
-            font-size: 26px;
             font-family: Baskerville;
-            padding-top: 30px;
+            font-size: 36px;
         }
         p{
              font-size: 18px;
             font-family: Muli;
-            line-height: 40px;
+            line-height: 35px;
+        }
+        @include media-breakpoint-down(lg){
+            padding: 100px 0px;
+            .target{
+                margin-bottom: 70px;
+            }
+        }
+        @include media-breakpoint-down(md){
+            padding: 100px 0px;
+            h6{
+                padding-bottom: 15px;
+            }
         }
         @include media-breakpoint-down(sm){
             padding: 80px 0px;
@@ -129,9 +160,10 @@ h6{
         }
         p{
             font-size: 18px;
-            line-height: 30px;
+            line-height: 40px;
             font-family: Muli;
             padding-left: 85px;
+            padding-top: 25px;
         }
         @include media-breakpoint-down(lg){
             padding: 50px 0px;
@@ -165,6 +197,9 @@ h6{
     .background{
         background-color: #FCFCFC;
         padding: 50px;
+        @include media-breakpoint-down(lg){
+            padding: 0px;   
+        }
     }
     .craft{
         background-color: #C3343C;
