--- a/src/app/modules/work/components/construction-portal/construction-portal.component.scss
+++ b/src/app/modules/work/components/construction-portal/construction-portal.component.scss
@@ -2,11 +2,12 @@
 @import '~bootstrap/scss/variables';
 @import '~bootstrap/scss/mixins';
 h2{
-    font-size: 57px;
+    font-size: 56px;
     font-family: Baskerville;
     color: #3B3B3B;
     @include media-breakpoint-down(md) {
-        font-size: 36px;
+        font-size: 32px;
+        padding-bottom: 15px;
     }
 }
 p{
@@ -24,7 +25,7 @@ h6{
     @include media-breakpoint-down(md) {
         font-size: 28px;
     }
-}  
+}   
     .banner{
         background-color: #DDFAFF;
         padding-top: 140px;
@@ -36,27 +37,43 @@ h6{
         }
         img{
             position: absolute;
-            width: 85%;
-            margin-top: -25%;
+            width: 100%;
+            margin-top: -28%;
             top: 100px;
-            right: 20px;
+            right: -75px;
         }
         @include media-breakpoint-down(lg){
+            height: 645px;
+            padding: 250px 0px;
             .banner-header{
                 padding: 15px 0px;
+            }
+            img{
+                margin-top: -22%;
             }
         }
         @include media-breakpoint-down(md){
+            height: 501px;
+            padding: 200px 0px;
             .banner-header{
-                padding: 15px 0px;
+                padding: 30px 0px;
+            }
+            img{
+                margin-top: -28%;
+            }
+            h6{
+                font-size: 20px;
             }
         }
         @include media-breakpoint-down(sm){
+            height: 740px;
+            padding: 300px 0px;
             .banner-header{
-                padding: 250px 0px;
+                padding: 150px 0px;
             }
             img{
-                margin-top: -70%;
+                width: 100%;
+                margin-top: -65%;
                 margin-left: -40px;
             }
         }
@@ -64,19 +81,23 @@ h6{
     .about-project{
         background-color: #FCFCFC;
         padding: 200px 0px;
+        p{
+             font-size: 18px;
+            line-height: 40px;
+        }
         .row{
             padding-bottom: 50px;
             margin-right: 0;
             margin-left: 0;
         }
         @include media-breakpoint-down(lg){
-            padding: 200px 0px;
-        }
-        @include media-breakpoint-down(md){
             padding: 150px 0px;
         }
+        @include media-breakpoint-down(md){
+            padding: 100px 0px;
+        }
         @include media-breakpoint-down(sm){
-            padding: 80px 0px;
+            padding: 40px 0px;
         }
     }
     .image-event{
@@ -94,19 +115,33 @@ h6{
         background-color: #FCFCFC;
         color: #3D3D3D;
         padding: 150px 0px;
+        .target{
+            margin-bottom: 120px;
+        }
         h6{
-            font-size: 26px;
             font-family: Baskerville;
-            padding-top: 30px;
+            font-size: 36px;
         }
         p{
-             font-size: 18px;
-            font-family: Muli;
-            line-height: 40px;
-        }
-        @include media-breakpoint-down(sm){
-            padding: 80px 0px;
-        }
+            font-size: 18px;
+           font-family: Muli;
+           line-height: 35px;
+       }
+       @include media-breakpoint-down(lg){
+           padding: 100px 0px;
+           .target{
+               margin-bottom: 70px;
+           }
+       }
+       @include media-breakpoint-down(md){
+           padding: 100px 0px;
+           h6{
+               padding-bottom: 15px;
+           }
+       }
+       @include media-breakpoint-down(sm){
+           padding: 80px 0px;
+       }
     }
     .needs-challenges{
         background-color: #EBEBEB;
@@ -156,7 +191,7 @@ h6{
         @include media-breakpoint-down(sm){
             padding: 0px 0px;
             .needs{
-                height: 930px;
+                height: 800px;
                 overflow: hidden;
             }
             .needs-right{
@@ -237,9 +272,9 @@ h6{
             margin-right: 100px;
         }
         @include media-breakpoint-down(lg){
-            padding: 100px 0px;
+            padding: 0px 0px;
             img{
-                width: 110%;
+                width: 99%;
                 margin-top: 100px;
             }
             li{
@@ -247,10 +282,10 @@ h6{
             }
         }
         @include media-breakpoint-down(md){
-            padding: 75px 0px;
+            padding: 0px 0px;
             img{
-                width: 100%;
-                margin-top: 40px;
+                width: 98%;
+                margin-top: 100px;
             }
             li{
                 margin-right: 40px;
@@ -259,7 +294,8 @@ h6{
         @include media-breakpoint-down(sm){
             padding: 50px 0px;
             img{
-                width: 100%;
+                width: 98%;
+                margin-top: 50px;
             }
         }
     }
@@ -375,3 +411,12 @@ h6{
     border-radius: 15px;
     box-shadow: none !important;
 }
+@include media-breakpoint-down(sm) {
+    .banner{
+        img{
+            width: 90%;
+            padding-left: 20px;
+            margin-right: 105px;
+        }
+    }
+    }
