--- a/src/app/modules/work/components/event-management/event-management.component.scss
+++ b/src/app/modules/work/components/event-management/event-management.component.scss
@@ -2,11 +2,11 @@
 @import '~bootstrap/scss/variables';
 @import '~bootstrap/scss/mixins';
 h2{
-    font-size: 57px;
+    font-size: 56px;
     font-family: Baskerville;
     color: #3B3B3B;
     @include media-breakpoint-down(md) {
-        font-size: 36px;
+        font-size: 32px;
     }
 }
 p{
@@ -45,11 +45,26 @@ h6{
             .banner-header{
                 padding: 15px 0px;
             }
+            img{
+                width: 120%;
+            }
         }
         @include media-breakpoint-down(md){
+            height: 600px;
+            padding: 150px 0px;
             .banner-header{
                 padding: 85px 0px;
             }
+            img{
+                padding-top: 75px;
+            }
+            h6{
+                font-size: 20px;
+            }
+        }
+        @include media-breakpoint-down(sm){
+            height: 750px;
+            padding: 100px 0px;
         }
 
     }
@@ -65,7 +80,7 @@ h6{
             padding: 200px 0px;
         }
         @include media-breakpoint-down(md){
-            padding: 150px 0px;
+            padding: 100px 0px;
         }
         @include media-breakpoint-down(sm){
             padding: 80px 0px;
@@ -95,12 +110,12 @@ h6{
             padding: 200px 0px;
         }
         @include media-breakpoint-down(md){
-            padding: 150px 0px;
+            padding: 100px 0px;
         }
         @include media-breakpoint-down(sm){
             padding: 80px 0px;
             h2{
-                font-size: 36px;
+                font-size: 32px;
                 margin-bottom: 30px;
             }
         }
@@ -119,6 +134,12 @@ h6{
             font-size: 18px;
             font-family: Muli;
             line-height: 40px;
+        }
+        @include media-breakpoint-down(md){
+            padding: 100px 0px;
+            .target{
+                margin-bottom: 50px;
+            }
         }
         @include media-breakpoint-down(sm){
             padding: 80px 0px;
@@ -143,7 +164,7 @@ h6{
         h6{
             margin-bottom: 25px;
             font-family: Baskerville;
-            font-size: 36px;
+            font-size: 32px;
         }
         p{
             font-weight: 300;
@@ -158,7 +179,7 @@ h6{
             width: 0px;
         }
         .needs-right{
-            padding: 100px 30px;
+            padding: 30px 30px;
         }
         @include media-breakpoint-down(lg){
             padding: 50px 0px;
@@ -169,7 +190,7 @@ h6{
         @include media-breakpoint-down(md){
             padding: 50px 0px;
             h1{
-                font-size: 72px; 
+                font-size: 56px; 
             }
             h2{
                 font-size: 36px;
@@ -178,7 +199,7 @@ h6{
         @include media-breakpoint-down(sm){
             padding: 0px 0px;
             .needs{
-                height: 900px;
+                height: 1050px;
                 overflow: hidden;
             }
             .needs-right{
@@ -217,6 +238,12 @@ h6{
         padding: 150px 200px;
         img{
             width: 100%;
+        }
+        @include media-breakpoint-down(lg){
+            padding: 129px 150px;
+        }
+        @include media-breakpoint-down(md){
+            padding: 100px 100px;
         }
         @include media-breakpoint-down(sm){
             padding: 50px 50px;
