--- a/src/app/modules/work/components/skill-development/skill-development.component.html
+++ b/src/app/modules/work/components/skill-development/skill-development.component.html
@@ -148,7 +148,7 @@
                     <p>A Desktop login provided easy
                         Access for different features and functionalities that needed the use of desktop </p>
             </div>
-            <div class="col-md-7">
+            <div class="col-md-7 only-mobile">
                 <img src="./assets/images/works/skill6.png">
             </div>
         </div>
@@ -161,7 +161,7 @@
             <div class="col-md-6 left">
                 <h2>Other Case Studies</h2>
                 <div class="button">
-                    <div class="btn btnn" routerLink="/services">See All Works</div>
+                    <div class="btn btnn" routerLink="/works">See All Works</div>
                 </div>
             </div>
             <div class="col-md-6 right">
